added basic user facing display

--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,9 @@
     </form>
     <button id="addString">Add</button>
     <button id="clearButton">Clear</button>
+
+    <h2>Your current list:</h2>
+    <p id="masterBoard"></p>
     <script src="popup.js"></script>
   </body>
 </html>
